<resources>
    <string name="Title" translatable="false">Title</string>
    <string name="Language" translatable="true">Language</string>
    <string name="English" translatable="true">English</string>
    <string name="Hebrew" translatable="true">Hebrew</string>
    <string name="Select" translatable="true">Select</string>
    <string name="Search" translatable="true">Search</string>
    <string name="DontHaveAccountCreateAccount" translatable="true">Dont have account? Create Account</string>
    <string name="Finish" translatable="true">Finish</string>
    <string name="Required" translatable="true">*Required</string>
    <string name="InvalidEmail" translatable="true">Invalid Email</string>
    <string name="Must6Chars" translatable="true">Must 6 or more chars</string>
    <string name="Must9Chars" translatable="true">Must 9 chars</string>
    <string name="EmailNotExist" translatable="true">Email not exist in the system</string>
    <string name="EmailExist" translatable="true">Email exist in the system</string>
    <string name="WrongPassword" translatable="true">Wrong Password</string>
    <string name="DifferentPassword" translatable="true">Comfirm Password Not match</string>
    <string name="OK" translatable="true">Ok</string>
    <string name="Loading" translatable="true">Loading</string>
    <string name="Other" translatable="true">Other</string>
    <string name="Error" translatable="true">System Error please try again in a few minutes</string>
    <string name="Male" translatable="true">Male</string>
    <string name="Female" translatable="true">Female</string>
    <string name="City" translatable="true">City</string>
    <string name="Kg" translatable="true">Kg</string>
    <string name="Cm" translatable="true">Cm</string>
    <string name="SelectCity" translatable="true">Select City</string>
    <string name="SelectWeight" translatable="true">Select Weight</string>
    <string name="SelectHeight" translatable="true">Select Height</string>
    <string name="BeerSheva" translatable="true">Beer Sheva</string>
    <string name="TelAviv" translatable="true">Tel Aviv</string>
    <string name="Haifa" translatable="true">Haifa</string>
    <string name="Age" translatable="true">Age</string>
    <string-array name="Gender">
        <item>@string/Male</item>
        <item>@string/Female</item>
        <item>@string/Other</item>
    </string-array>
    <string name="Weight" translatable="true">Weight</string>
    <string name="Height" translatable="true">Height</string>
    <string name="SelectAge" translatable="true">Select Age</string>
    <string name="SelectGender" translatable="true">Select Gender</string>
    <string name="Next" translatable="true">Next</string>
    <string name="app_name" translatable="true">LiftYourLife</string>
    <string name="SignIn" translatable="true">Sign In</string>
    <string name="CreateAccount" translatable="true">Create Account</string>
    <string name="ResetPassword" translatable="true">Reset Password</string>
    <string name="About" translatable="true">About</string>
    <string name="Contact" translatable="true">Contact</string>
    <string name="SelectLanguage" translatable="true">Select Language</string>
    <string name="Exit" translatable="true">Exit</string>
    <string name="AreYouSureToExit" translatable="true">Are you sure you want to Exit?</string>
    <string name="Email" translatable="true">Email</string>
    <string name="CheckEmailVerify" translatable="true">This account not verify yet, please check the link sent to your email to verify this account.</string>
    <string name="Password" translatable="true">Password</string>
    <string name="RecoverPassword" translatable="true">Forgot password? Reset Password</string>
    <string name="Google" translatable="true">Google</string>
    <string name="Facebook" translatable="true">Facebook</string>
    <string name="OR" translatable="true">OR</string>
    <string name="FirstName" translatable="true">First Name</string>
    <string name="LastName" translatable="true">Last Name</string>
    <string name="BirthDay" translatable="true">BirthDay</string>
    <string name="RequiredAge18OrMore" translatable="true">Required Age 18 Or More</string>
    <string name="Phone" translatable="true">Phone</string>
    <string name="PhoneLenth" translatable="true">Required 10 digits</string>
    <string name="ConfirmPassword" translatable="true">Confirm Password</string>
    <string name="AlreadyHaveAccount" translatable="true">Already Have Account? Sign In</string>
    <string name="CompleteCreateAccount" translatable="true">Successfully registered, Please verify your email with link sent to your email.</string>
    <string name="TheEmailAlreadyExistsInTheSystem" translatable="true">The email already exists in the system.</string>
    <string name="ForgotPasswordInfo" translatable="true">Please enter the email address which you want to reset the password</string>
    <string name="ResetLink" translatable="true">Reset Link has been send to your Email</string>
    <string name="AboutVersion" translatable="true">Version 1.1.0</string>
    <string name="Copyright" translatable="true">Copyright &#169; 2022 Daniel Elmaliach, Elad Zafrani and Almog Sofer</string>
    <string name="AboutInfo" translatable="true">The app was developed as part of the course Distributed Web Applications by Daniel Elmaleh, Elad Zafrani and Almog Sofer with the goal of creating a convenient app and tracking training and deep learning of the user to help him take care of the training life and not give up</string>
    <string name="ContactInfo" translatable="true">Have you meet any problem?\nThe development team is at your service</string>
    <string name="ContactSubject" translatable="true">Contact - App LiftYourLife</string>
    <string name="ContactText" translatable="true">Team LiftYourLife, </string>
    <string name="ContactEmailChooser" translatable="true">Choose an Email App</string>
    <string name="Profile" translatable="true">Profile</string>
    <string name="Home" translatable="true">Home</string>
    <string name="WorkOut" translatable="true">Workout</string>
    <string name="ChangePassword" translatable="true">Change Password</string>
    <string name="Bmi" translatable="true">BMI</string>
    <string name="Logout" translatable="true">Logout</string>
    <string name="Yes" translatable="true">Yes</string>
    <string name="No" translatable="true">No</string>
    <string name="AreYouSure" translatable="true">Are you sure you want to Log Out?</string>
    <string name="CantChangeEmail" translatable="true">Cant Change Email</string>
    <string name="ProfileUpdated" translatable="true">Profile successfully updated!</string>
    <string name="CameraPermissionDenied" translatable="true">Camera Permission Denied</string>
    <string name="Camera" translatable="true">Cammera</string>
    <string name="Gallery" translatable="true">Gallery</string>
    <string name="CanNotChange" translatable="true">Can not change</string>
    <string name="UpdateProfile" translatable="true">Update Profile</string>
    <string name="CurrentPassword" translatable="true">Current Password</string>
    <string name="NewPassword" translatable="true">New Password</string>
    <string name="ConfirmNewPassword" translatable="true">Confirm Password</string>
    <string name="Change" translatable="true">Change</string>
    <string name="PasswordChanged" translatable="true">Password Changed</string>
    <string name="WeightTracking" translatable="true">Weight Tracking</string>
    <string name="BMI" translatable="true">מדד מסת גוף - BMI</string>
    <string name="CalculateBMI" translatable="true">Calculate BMI</string>
    <string name="Result">Result</string>
    <string name="UNDERWEIGHT">UNDERWEIGHT</string>
    <string name="NORMAL">NORMAL</string>
    <string name="OVERWEIGHT">OVERWEIGHT</string>
    <string name="OBESE">OBESE</string>
    <string name="EXTREMELYOBESE">EXTREMELY OBESE</string>
    <string name="Sunday" translatable="true">Sunday</string>
    <string name="Monday" translatable="true">Monday</string>
    <string name="Tuesday" translatable="true">Tuesday</string>
    <string name="Wednesday" translatable="true">Wednesday</string>
    <string name="Thursday" translatable="true">Thursday</string>
    <string name="Friday" translatable="true">Friday</string>
    <string name="Saturday" translatable="true">Saturday</string>
    <string name="AddExercise" translatable="true">Add Exercise</string>
    <string name="PickExercise" translatable="true">Pick Exercise</string>
    <string name="RemoveExercise" translatable="true">Remove Exercise</string>
    <string name="AddPlan" translatable="true">Add Plan</string>
    <string name="RemovePlan" translatable="true">Remove Plan</string>
    <string name="Sets" translatable="true">Sets</string>
    <string name="Reps" translatable="true">Reps</string>
    <string name="Rest" translatable="true">Rest</string>
    <string name="Plan" translatable="true">Plan</string>
    <string name="Date" translatable="true">Date</string>
    <string name="Add" translatable="true">Add</string>
    <string name="Remove" translatable="true">Remove</string>
    <string name="Cancel" translatable="true">Cancel</string>
    <string name="Description">Description</string>
    <string name="Seconds">Seconds</string>
    <string name="PlanSuccessfullyAdded" translatable="true">The plan was successfully added.</string>
    <string name="PlanSuccessfullyRemoved" translatable="true">The plan was successfully removed.</string>
    <string name="TypeOfMuscle" translatable="true">Type of muscle</string>
    <string name="ExerciseName" translatable="true">Exercise Name</string>
    <string name="Shoulder" translatable="true">Shoulder</string>
    <string name="FrontHand" translatable="true">Front Hand</string>
    <string name="BackHand" translatable="true">Back Hand</string>
    <string name="Chest" translatable="true">Chest</string>
    <string name="Back" translatable="true">Back</string>
    <string name="Legs" translatable="true">Legs</string>
    <string name="Stomach" translatable="true">Stomach</string>
    <string name="ExerciseSuccessfullyAdded" translatable="true">Exercise Successfully Added</string>
    <string name="ExerciseSuccessfullyRemoved" translatable="true">Exercise Successfully Removed</string>
    <string name="ExerciseNameExists" translatable="true">The exercise has not been added, there is already an exercise with this name.</string>
    <string-array name="MuscleType">
        <item>@string/Shoulder</item>
        <item>@string/FrontHand</item>
        <item>@string/BackHand</item>
        <item>@string/Chest</item>
        <item>@string/Back</item>
        <item>@string/Legs</item>
        <item>@string/Stomach</item>
        <item>@string/Other</item>
    </string-array>
    <string-array name="Workout">
        <item>@string/Sunday</item>
        <item>@string/Monday</item>
        <item>@string/Tuesday</item>
        <item>@string/Wednesday</item>
        <item>@string/Thursday</item>
        <item>@string/Friday</item>
        <item>@string/Saturday</item>
    </string-array>
    <string-array name="Lagnuage">
        <item>@string/Hebrew</item>
        <item>@string/English</item>
    </string-array>
    <string-array name="LiftYourLifeTagsName">
        <item>@string/SignIn</item>
        <item>@string/CreateAccount</item>
        <item>@string/ResetPassword</item>
        <item>@string/About</item>
        <item>@string/Contact</item>
    </string-array>
</resources>