<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="end"
    android:layout_gravity="end">
    <group
        android:checkableBehavior="single"
        android:gravity="end"
        android:layout_gravity="end">
        <item
            android:id="@+id/ItemHome"
            android:icon="@drawable/home"
            android:title="@string/Home" />
        <item
            android:id="@+id/ItemWorkOut"
            android:icon="@drawable/workout"
            android:title="@string/WorkOut" />
        <item
            android:id="@+id/ItemPlan"
            android:visible="false"
            android:icon="@drawable/plan"
            android:title="@string/Plan" />
        <item
            android:id="@+id/ItemBmi"
            android:icon="@drawable/bmi"
            android:title="@string/Bmi" />
        <item
            android:id="@+id/ItemProfile"
            android:icon="@drawable/person"
            android:title="@string/Profile" />
        <item
            android:id="@+id/ItemChangePassword"
            android:icon="@drawable/reset_password"
            android:title="@string/ChangePassword" />
        <item
            android:id="@+id/ItemSignOut"
            android:icon="@drawable/logout"
            android:title="@string/Logout" />
    </group>
</menu>