<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutPlan"
            style="@style/TextInputLayout_Style"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:hint="@string/Plan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/plan">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextInputPlan"
                style="@style/TextInputEditText_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/ButtonAdd"
            style="@style/Button_Style"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/Add"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/TextInputLayoutPlan"
            app:layout_constraintStart_toStartOf="@+id/TextInputLayoutPlan"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutPlan" />

        <Button
            android:id="@+id/ButtonCancel"
            style="@style/Button_Style"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/Cancel"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/ButtonAdd"
            app:layout_constraintStart_toStartOf="@+id/ButtonAdd"
            app:layout_constraintTop_toBottomOf="@+id/ButtonAdd" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
