<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="7dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ExerciseImage"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:background="@color/blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/Exercise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textSize="26sp"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ExerciseImage"
                app:layout_constraintTop_toTopOf="@+id/ExerciseImage"
                tools:text="Tag" />

            <TextView
                android:id="@+id/Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textColor="@color/default_color"
                app:layout_constraintStart_toStartOf="@+id/Exercise"
                app:layout_constraintTop_toBottomOf="@+id/Exercise"
                tools:text="Description" />

            <TextView
                android:id="@+id/Sets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/default_color"
                android:textSize="18sp"

                app:layout_constraintStart_toStartOf="@+id/Exercise"
                app:layout_constraintTop_toBottomOf="@+id/Description"
                tools:text="@string/Sets" />

            <TextView
                android:id="@+id/Reps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/Sets"
                app:layout_constraintStart_toEndOf="@+id/Sets"
                app:layout_constraintTop_toTopOf="@+id/Sets"
                tools:text="@string/Reps" />

            <TextView
                android:id="@+id/Rest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/Reps"
                app:layout_constraintStart_toEndOf="@+id/Reps"
                app:layout_constraintTop_toTopOf="@+id/Reps"
                tools:text="@string/Rest" />

            <TextView
                android:id="@+id/Weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/Sets"
                app:layout_constraintTop_toBottomOf="@+id/Sets"
                tools:text="@string/Weight" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
