<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutHeight"
            style="@style/TextInputLayout_Style"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:hint="@string/Height"
            app:endIconDrawable="@drawable/drop_down"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="@+id/TextInputLayoutWeight"
            app:layout_constraintStart_toStartOf="@+id/TextInputLayoutWeight"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/height">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextInputHeight"
                style="@style/TextInputEditText_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutWeight"
            style="@style/TextInputLayout_Style"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:hint="@string/Weight"
            app:endIconDrawable="@drawable/drop_down"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutHeight"
            app:startIconDrawable="@drawable/height">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextInputWeight"
                style="@style/TextInputEditText_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutBirthDay"
            style="@style/TextInputLayout_Style"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:hint="@string/BirthDay"
            app:endIconDrawable="@drawable/drop_down"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="@+id/TextInputLayoutHeight"
            app:layout_constraintStart_toStartOf="@+id/TextInputLayoutHeight"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutWeight"
            app:startIconDrawable="@drawable/date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextInputBirthDay"
                style="@style/TextInputEditText_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutGender"
            style="@style/TextInputLayout_Style"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="4dp"
            android:hint="@string/Gender"
            app:endIconDrawable="@drawable/drop_down"
            app:startIconDrawable="@drawable/gender_pick"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="@+id/TextInputLayoutBirthDay"
            app:layout_constraintStart_toStartOf="@+id/TextInputLayoutBirthDay"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutBirthDay">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextInputGender"
                style="@style/TextInputEditText_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/NextButtonFinish"
            style="@style/Button_Style"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/Finish"
            app:layout_constraintEnd_toEndOf="@+id/TextInputLayoutGender"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/TextInputLayoutGender"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutGender" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

